Pause display links when window is not visible. https://bugs.webkit.org/show_bug.cgi?id=185627 <rdar://problem/39401106>

Reviewed by Simon Fraser.

Pause/resume display links created in the UI process when the window is hidden/shown.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::dispatchActivityStateChange):
* UIProcess/mac/DisplayLink.cpp:
(WebKit::DisplayLink::pause):
(WebKit::DisplayLink::resume):
* UIProcess/mac/DisplayLink.h:


Canonical link: https://commits.webkit.org/201129@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231818 268f45cc-cd09-0410-ab3c-d52691b4dbfc