Source/WebKit/UIProcess/WebPageProxy.cpp
@@ -1586,8 +1586,13 @@ void WebPageProxy::dispatchActivityStateChange()
 #endif
 
     if (changed & ActivityState::IsVisible) {
-        if (isViewVisible())
+        if (isViewVisible()) {
             m_visiblePageToken = m_process->visiblePageToken();
+#if PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 101400
+            if (m_displayLink)
+                m_displayLink->resume();
+#endif
+        }
         else {
             m_visiblePageToken = nullptr;
 
@@ -1595,6 +1600,10 @@ void WebPageProxy::dispatchActivityStateChange()
             // state, it might not send back a reply (since it won't paint anything if the web page is hidden) so we
             // stop the unresponsiveness timer here.
             m_process->responsivenessTimer().stop();
+#if PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 101400
+            if (m_displayLink)
+                m_displayLink->pause();
+#endif
         }
     }
 
